Added payment info feature module

--- a/features/payment/src/main/res/values/strings.xml
+++ b/features/payment/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="error_message">Кажется, что-то пошло не так.\nПопробуйте позже.</string>
     <string name="try_again">Перезагрузить</string>
     <string name="accepting">Ваш заказ принят в работу</string>
-    <string name="comment">Подтверждение заказа №%1$s может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
+    <string name="comment">Подтверждение заказа №%1$s может занять некоторое время (от 1 часа до суток).\nКак только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
     <string name="payment_title">Заказ оплачен</string>
     <string name="confirmation">Супер!</string>
     <string name="paid_order">Заказ оплачен</string>
